--- a/SeazonProject/src/main/resources/application.properties
+++ b/SeazonProject/src/main/resources/application.properties
@@ -6,6 +6,15 @@ spring.datasource.url=jdbc:mariadb://localhost:3306/seazonproject
 spring.datasource.username=root
 spring.datasource.password=root
 
+spring.thymeleaf.encoding=UTF-8
+spring.thymeleaf.servlet.content-type=text/html; charset=UTF-8
+spring.http.encoding.charset=UTF-8
+spring.http.encoding.enabled=true
+spring.http.encoding.force=true
+server.servlet.encoding.charset=UTF-8
+server.servlet.encoding.force=true
+server.servlet.encoding.enabled=true
+
 # Hibernate configuration
 spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
 
